fix: horizontal scroll was removed in the brand container

--- a/src/components/UI/molecules/BrandsContainer/BrandsContainer.module.scss
+++ b/src/components/UI/molecules/BrandsContainer/BrandsContainer.module.scss
@@ -30,7 +30,6 @@
   }
 
   &-container {
-    min-width: max-content;
     height: auto;
     background-color: #fff;
     white-space: nowrap;
@@ -41,7 +40,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 5px;
-      max-width: 99.9vw;
+      max-width: 100vw;
       padding: 0 15px;
 
       @media (min-width: v.$screen-md) {
